--- a/app/assets/stylesheets/autoload/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/autoload/bootstrap_and_overrides.css.less
@@ -27,3 +27,15 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+.navbar .divider-vertical {
+  height: 40px;
+  margin: 5px 9px 5px;
+  border-right: 1px solid #ffffff;
+  border-left: 1px solid #f2f2f2;
+}
+
+.navbar-inverse .divider-vertical {
+  border-right-color: #222222;
+  border-left-color: #111111;
+}
