--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -4,6 +4,7 @@
       .panel-heading Sign Up
       .panel-body
         = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+          = f.input :username
           = f.input :email
           = f.input :password
           = f.input :password_confirmation
