setup omniauth + facebok and vkontakte

--- a/app/assets/stylesheets/autoload/devise_views.css.sass
+++ b/app/assets/stylesheets/autoload/devise_views.css.sass
@@ -1,4 +1,13 @@
 .panel
   .panel-heading
+    span
+      h2
+        display: inline-block
+
+      span.label
+        margin-left: 10px
+        position: relative
+        bottom: 10px
+
     .social
       margin-top: 25px
