--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,13 +1,16 @@
 .row
-  .col-md-6.col-md-offset-4
+  .col-md-7.col-md-offset-5
     .panel
       .panel-heading
         .row
-          .col-md-7.col-md-push-6.social
+          .col-md-6.col-md-push-6.social
             = render 'partials/social_buttons'
-          .col-md-5.col-md-pull-7
+          .col-md-6.col-md-pull-6
             span
               h2 Sign Up
+              - if session_provider.present?
+                span.label.label-default
+                  = session_provider
 
       .panel-body
         = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
