--- a/app/views/partials/_social_buttons.html.slim
+++ b/app/views/partials/_social_buttons.html.slim
@@ -1,8 +1,8 @@
 .social-buttons
-  = link_to '#' do
+  = link_to user_omniauth_authorize_path(:vkontakte) do
     i.icon-vk.icon-2x
 
-  = link_to '#' do
+  = link_to user_omniauth_authorize_path(:facebook) do
     i.icon-facebook-sign.icon-2x
 
   = link_to '#' do
