--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,7 +1,7 @@
 nav.navbar.navbar-static-top role='navigation'
 
   .navbar-header
-    a.navbar-brand href='#'
+    a.navbar-brand href='#{root_path}'
       i.icon-home.icon-large
       | &nbsp;&nbsp;
       | OctoCrowd
