--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,5 +25,4 @@ html lang="en"
         .col-lg-9
           = bootstrap_flash
           = yield
-      footer
-        p &copy; Company 2013
+    = render 'layouts/footer'
