--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -8,11 +8,11 @@ nav.navbar.navbar-static-top role='navigation'
 
   ul.nav.navbar-nav.navbar-right
     - unless signed_in?
-      li class='#{'active' if current_page?(new_user_session_path)}'
+      li class=('active' if current_page?(new_user_session_path))
         = link_to :new_user_session do
           i.icon-signin  Log in
 
-      li class='#{'active' if current_page?(new_user_registration_path)}'
+      li class=('active' if current_page?(new_user_registration_path))
         = link_to :new_user_registration do
           i.icon-plus-sign  Sign up
 
