--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -10,26 +10,26 @@ nav.navbar.navbar-static-top role='navigation'
     - unless signed_in?
       li class=('active' if current_page?(new_user_session_path))
         = link_to :new_user_session do
-          i.icon-signin  Log in
+          = icon_with_label 'Log in', 'icon-signin'
 
       li class=('active' if current_page?(new_user_registration_path))
         = link_to :new_user_registration do
-          i.icon-plus-sign  Sign up
+          = icon_with_label 'Sign up', 'icon-plus-sign'
 
     - else
       li class=('active' if current_page?(new_post_path))
         =link_to :new_post do
-          i.icon-pencil
-          | &nbsp;&nbsp;
-          | Write post
+          = icon_with_label 'Write post', 'icon-pencil'
 
       li.divider-vertical
       li.dropdown
         a.dropdown-toggle href='#' data-toggle='dropdown'
-          = current_user.username
-          | &nbsp;&nbsp;
-          i.icon-caret-down.icon-large
+          = label_with_icon "#{current_user.username}", 'icon-caret-down icon-large'
 
         ul.dropdown-menu
+          - if current_user.admin?
+            li= link_to :admin_root do
+              = icon_with_label 'Admin', 'icon-key'
+
           li= link_to :destroy_user_session, :method => :delete do
-            i.icon-signout  Log out
+            = icon_with_label 'Log out', 'icon-signout'
