--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,14 +1,16 @@
-.page-header
-  h1 Create new post
+.row
+  .page-header
+    h1 Create new post
 
-= simple_form_for(@post) do |f|
-  = f.input :title
+.row
+  = simple_form_for(@post) do |f|
+    = f.association :categories, collection: Category.all, include_blank: true, input_html: { class: 'chosen-select' }
 
-  = f.input :body, as: :text, input_html: { class: 'redactor', rows: 100 }
+    = f.input :title
 
-  .row
-    .col-md-2
-      button.btn.btn-primary.btn-block
-        i.icon-ok.large
-        | &nbsp;&nbsp;
-        | Submit
+    = f.input :body, as: :text, input_html: { class: 'redactor', rows: 100 }
+
+    .row
+      .col-md-2
+        button.btn.btn-primary.btn-block
+          = icon_with_label 'Submit', 'icon-ok large'
