fix new post body textarea rows count

--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -8,7 +8,7 @@
 
     = f.input :title
 
-    = f.input :body, as: :text, input_html: { class: 'redactor', rows: 100 }
+    = f.input :body, as: :text, input_html: { class: 'redactor' }
 
     .row
       .col-md-2
