add footer to post view

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,6 +9,9 @@
           .panel-body
             p= raw post.body
 
+          .panel-footer
+            p= post.author.username
+
 
   .col-lg-3
     .panel
@@ -17,3 +20,5 @@
 
       .panel-body
         | as
+
+
