install draper and use it for categories internalizetion

--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -4,7 +4,7 @@
 
 .row
   = simple_form_for(@post) do |f|
-    = f.association :categories, collection: Category.all, include_blank: true, input_html: { class: 'chosen-select' }
+    = f.association :categories, collection: Category.all.decorate, include_blank: true, input_html: { class: 'chosen-select' }
 
     = f.input :title
 
