styling post view

--- a/app/assets/stylesheets/autoload/posts.css.sass
+++ b/app/assets/stylesheets/autoload/posts.css.sass
@@ -1,8 +1,14 @@
 .post
-  .heading
+  .title
+    font-size: 24px
     a
       text-decoration: underline
       color: #333333
 
       &:hover
         color: #888888
+
+  .categories
+    font-size: 12px
+    margin-top: 5px
+    margin-left: 15px
