--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,25 +1,38 @@
 .row
   .col-lg-9
-    - @posts.each do |post|
+    - @posts.decorate.each do |post|
       .row.post
         .panel
           .panel-heading
-            .heading
-              =link_to post_path(post) do
-                h3= post.title
+            h3.panel-title.title
+              i.icon-caret-right
+              | &nbsp;&nbsp;
+              =link_to post.title, post_path(post)
+
             .categories
               ul.list-inline
-                - post.categories.each do |c|
+                - categories = post.categories.decorate
+                - categories.each_with_index do |c, i|
                   li
                     =link_to category_path(c) do
-                      .small= c.name
+                      .small.text-success
+                        = c.name
+                        = ',' if i != categories.length - 1
 
 
           .panel-body
             p= raw post.body
 
           .panel-footer
-            p= post.author.username
+            .row
+              .col-lg-3
+                .pull-left
+                  = icon_with_label nil, 'icon-time', class: 'momentjs-calendar', data: { time: post.time }
+              .col-lg-3
+              .col-lg-3
+              .col-lg-3
+                .pull-right
+                  = icon_with_label post.author.username, 'icon-user'
 
 
   .col-lg-3
