--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,4 +1,70 @@
-.page-header
-  h1= @post.title
+.post
+  / Post body
+  .row
+    .panel
+      .panel-heading
+        h3.panel-title.title
+          i.icon-caret-right
+          | &nbsp;&nbsp;
+          = @post.title
 
-= raw @post.body
+        .categories
+          ul.list-inline
+            - categories = @post.categories.decorate
+            - categories.each_with_index do |c, i|
+              li
+                =link_to category_path(c) do
+                  .small.text-success
+                    = c.name
+                    = ',' if i != categories.length - 1
+
+
+      .panel-body
+        p= raw @post.body
+
+      .panel-footer
+        .row
+          .col-lg-3
+            .pull-left
+              = icon_with_label nil, 'icon-time', class: 'momentjs-calendar', data: { time: @post.time }
+          .col-lg-3
+          .col-lg-3
+          .col-lg-3
+            .pull-right
+              = icon_with_label @post.author.username, 'icon-user'
+
+
+  / Comments
+  - if @comments.any?
+    .row.comments
+      i.icon-comments
+      | &nbsp;&nbsp;
+      h3 Comments
+
+      - @comments.each do |c|
+        .comment
+          .bs-callout.bs-callout-info
+            .head
+              .pull-left
+                i.icon-user
+                | &nbsp;&nbsp;
+                h4= c.author_name
+              .small.pull-right
+                = icon_with_label nil, 'icon-time', class: 'momentjs-calendar', data: { time: c.time }
+              .clearfix
+
+            .body
+              p= raw c.comment
+
+
+  / New comment
+  .row.comment_form.js-new-comment
+    h4 Write comment
+
+    = simple_form_for(@new_comment, url: post_comments_path(@post)) do |f|
+      = f.input :comment, as: :text, label: false, input_html: { class: 'redactor' }
+
+      button.btn.btn-primary
+        = icon_with_label 'Submit', 'icon-ok large'
+
+
