--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,15 +1,18 @@
 .row
-  .col-lg-9
+  .col-lg-8
     - @posts.decorate.each do |post|
       = render partial: 'post', locals: { post: post }
 
-  .col-lg-3
-    .panel
-      .panel-heading
-        h2 Categories
+  .col-lg-3.col-lg-offset-1
+    .categories
+      h3 Categories
 
-      .panel-body
-        | as
+      .list-group
+        - @categories.each do |c|
+          = link_to c.name, category_path(c), class: 'list-group-item'
+
+
+
 
 .row
   = paginate @posts, :theme => 'twitter-bootstrap-3'
