header on category show page

--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -1,5 +1,8 @@
 .row
   .col-lg-8
+    .page-header
+      h1= @category.decorate.name
+
     - @posts.decorate.each do |post|
       = render partial: 'posts/post', locals: { post: post }
 
