install act as commentable with threading

--- a/app/assets/stylesheets/autoload/posts.css.sass
+++ b/app/assets/stylesheets/autoload/posts.css.sass
@@ -16,3 +16,9 @@
   .comments
     h3, h4
       display: inline
+
+    .thread
+      margin-left: 40px
+
+    a.js-comment-answer
+      font-size: 11px
