working post cut

--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -18,7 +18,8 @@
 
 
     .panel-body
-      p= raw post.body
+      p= raw post.announce
+      = link_to 'Read next', post_path(post), class: 'btn btn-default btn-xs'
 
     .panel-footer
       .row
