--- a/app/assets/stylesheets/autoload/redactor.css.sass
+++ b/app/assets/stylesheets/autoload/redactor.css.sass
@@ -4,8 +4,7 @@ body .redactor_toolbar li a.redactor_btn_cut
 cut
   display: block
 
-  border-top: 1px dotted
-  border-color: black
+  border-top: 1px solid #cccccc
 
   height: 1px
   width: 100%
