--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,15 +1,26 @@
 .row
   .col-lg-8
-    - @posts.decorate.each do |post|
-      = render partial: 'post', locals: { post: post }
+    .posts
+      - @posts.decorate.each do |post|
+        = render partial: 'post', locals: { post: post }
 
   .col-lg-3.col-lg-offset-1
-    .categories
+    .category-list
       h3 Categories
 
       .list-group
         - @categories.each do |c|
-          = link_to c.name, category_path(c), class: 'list-group-item'
+          - subscribed = current_user.has_subscription_to?(c)
+
+          = link_to category_path(c), class: "category list-group-item", data: { category_id: c.id, subscribed: subscribed } do
+            = c.name
+
+            - if current_user
+
+              .js-hidden-menu.pull-right
+                .js-subscribe
+                  i.icon-bookmark.js-subscribed style="#{'display: none' unless subscribed}"
+                  i.icon-bookmark-empty.js-unsubscribed style="#{'display: none' if subscribed}"
 
 
 
