--- a/app/assets/stylesheets/elements/post.css.sass
+++ b/app/assets/stylesheets/elements/post.css.sass
@@ -22,3 +22,10 @@
 
     a.js-comment-answer
       font-size: 11px
+
+  .tags
+    font-size: 12px
+    margin-left: 10px
+
+    .tag
+      text-decoration: underline
