--- a/app/views/posts/_post_preview.html.slim
+++ b/app/views/posts/_post_preview.html.slim
@@ -24,11 +24,16 @@
 
       .panel-footer
         .row
-          .col-lg-3
-            .pull-left
-              = icon_with_label nil, 'icon-time', class: 'momentjs-calendar', data: { time: DateTime.now.to_s }
-          .col-lg-3
-          .col-lg-3
-          .col-lg-3
+          .col-lg-9
+            i.icon-tags
+            span.text-primary.tags
+              - @tags.each_with_index do |tag, i|
+                = link_to '#' do
+                  span.tag= tag
+                = ', ' if i != @tags.length - 1
+
+          .col-lg-2
+            = icon_with_label nil, 'icon-time', class: 'momentjs-calendar', data: { time: DateTime.now.to_s }
+          .col-lg-1
             .pull-right
               = icon_with_label @post.author.username, 'icon-user'
