--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,7 @@ html lang="en"
     = javascript_include_tag "application"
 
   body
+    = render 'layouts/scroll_links'
     = render 'layouts/navbar'
     .container
       .row
