style scroll links

--- a/app/views/layouts/_scroll_links.html.slim
+++ b/app/views/layouts/_scroll_links.html.slim
@@ -1,9 +1,5 @@
 a href="#" class="btn btn-lg scroll-btn scroll-to-top"
-  i.icon-chevron-up
-  | &nbsp;&nbsp;
-  | Scroll to Top
+  i.icon-chevron-up.icon-large
 
 a href="#" class="btn btn-lg scroll-btn scroll-to-bottom"
-  i.icon-chevron-down
-  | &nbsp;&nbsp;
-  | Scroll to Bottom
+  i.icon-chevron-down.icon-large
