--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -8,10 +8,10 @@ nav.navbar.navbar-static-top role='navigation'
 
   ul.nav.navbar-nav.navbar-right
     .search.navbar-left
-      = simple_form_for '', url: search_path do |f|
+      = simple_form_for '', url: posts_path, method: :get do |f|
         .navbar-form role="search"
-          = f.input :query, label: false, class: 'js-search form-control'
-          = button_tag '#', class: 'js-search btn btn-link'do
+          = f.input :search, input_html: { value: params[:search], class: 'js-search-input form-control' }, label: false
+          = button_tag '#', class: 'js-search-btn btn btn-link'do
             i.icon-search.icon-large
 
     - unless signed_in?
