--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,7 +1,7 @@
 .row
   .col-lg-8
     .posts
-      - @posts.decorate.each do |post|
+      - PostDecorator.decorate_collection(@posts).each do |post|
         = render partial: 'post', locals: { post: post }
 
   .col-lg-3.col-lg-offset-1
