--- a/app/views/posts/search.html.slim
+++ b/app/views/posts/search.html.slim
@@ -2,8 +2,10 @@
   .col-lg-8
     .row.page-header
       h1
-        | Search for
+        | Search
         - if @tag
+          | &nbsp;
+          | for
           | &nbsp;
           span.label.label-default.js-search-tag= @tag
 
