--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -8,7 +8,7 @@
 
   .col-lg-3.col-lg-offset-1
     .category-list
-      h3 Categories
+      h3= t('.categories')
 
       .list-group
         - @categories.each do |c|
