--- a/app/views/posts/_comment.html.slim
+++ b/app/views/posts/_comment.html.slim
@@ -18,6 +18,6 @@
 
     .footer
       a.js-comment-answer href="#"
-        = icon_with_label 'Answer', 'icon-comment'
+        = icon_with_label t('.answer'), 'icon-comment'
 
       .js-new-comment
