--- a/app/views/posts/search.html.slim
+++ b/app/views/posts/search.html.slim
@@ -2,10 +2,10 @@
   .col-lg-8
     .row.page-header
       h1
-        | Search
+        = t('.search')
         - if @tag
           | &nbsp;
-          | for
+          = t('.for')
           | &nbsp;
           span.label.label-default.js-search-tag= @tag
 
@@ -15,7 +15,7 @@
 
   .col-lg-3.col-lg-offset-1
     .category-list
-      h3 Categories
+      h3= t('.categories')
 
       .list-group
         - @categories.each do |c|
