--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -48,7 +48,7 @@
     .row.comments
       i.icon-comments
       | &nbsp;&nbsp;
-      h3 Comments
+      h3= t('.comments')
 
       - @comments.each do |c|
         = render partial: 'comment_thread', locals: { parent_comment: c }
@@ -56,12 +56,12 @@
 
   / New comment
   .row.comment_form.js-new-comment
-    h4 Write comment
+    h4= t('.write_comment')
 
     = simple_form_for(@new_comment, url: post_comments_path(@post)) do |f|
       = f.input :body, as: :text, label: false, input_html: { class: 'redactor' }
 
       button.btn.btn-primary
-        = icon_with_label 'Submit', 'icon-ok large'
+        = icon_with_label t('.submit'), 'icon-ok large'
 
 
