--- a/app/views/partials/_social_buttons.html.slim
+++ b/app/views/partials/_social_buttons.html.slim
@@ -5,7 +5,7 @@
   = link_to user_omniauth_authorize_path(:facebook) do
     i.icon-facebook-sign.icon-2x
 
-  = link_to '#' do
+  = link_to user_omniauth_authorize_path(:twitter) do
     i.icon-twitter-sign.icon-2x
 
   = link_to '#' do
