--- a/app/views/partials/_social_buttons.html.slim
+++ b/app/views/partials/_social_buttons.html.slim
@@ -8,7 +8,7 @@
   = link_to user_omniauth_authorize_path(:twitter) do
     i.icon-twitter-sign.icon-2x
 
-  = link_to '#' do
+  = link_to user_omniauth_authorize_path(:github) do
     i.icon-github-sign.icon-2x
 
   = link_to '#' do
