--- a/app/views/posts/_comment.html.slim
+++ b/app/views/posts/_comment.html.slim
@@ -1,7 +1,7 @@
 - comment = comment.decorate
 
-.comment data-comment-id="#{comment.id}"
-  .bs-callout.bs-callout-info
+.comment.col-lg-7 data-comment-id="#{comment.id}"
+  .bs-callout class="bs-callout-#{callout_type(level)}"
     .head
       .pull-left
         i.icon-user
@@ -9,8 +9,10 @@
         h4= comment.author_name
       .small.pull-right
         = icon_with_label nil, 'icon-time', class: 'momentjs-calendar', data: { time: comment.time }
-        a.js-comment-delete href="#"
-          i.pull-right.icon-remove
+
+        - if current_user.admin?
+          a.js-comment-delete href="#"
+            i.pull-right.icon-remove
       .clearfix
 
     .body
