--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -11,7 +11,7 @@
   .page-header
     h1= t('.create_new_post')
 
-.row.js-new-post
+.row
   = simple_form_for(@post) do |f|
     .row
       .col-lg-6
