--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -34,6 +34,9 @@ nav.navbar.navbar-static-top role='navigation'
           = label_with_icon "#{current_user.username}", 'icon-caret-down icon-large', class: 'js-current-user'
 
         ul.dropdown-menu
+          li= link_to :subscriptions do
+            = icon_with_label t('.subscriptions'), 'icon-rss'
+
           - if current_user.try(:admin?)
             li= link_to :admin_root, data: { 'no-turbolink' => nil } do
               = icon_with_label t('.admin'), 'icon-key'
