--- a/app/views/posts/_post_search.html.slim
+++ b/app/views/posts/_post_search.html.slim
@@ -23,7 +23,7 @@
           = raw text
         - else
           = raw post.announce
-          = post.read_next_link
+          = post.read_next_link if post.has_cut?
 
 
     .panel-footer
