fix redactor in production

--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -22,7 +22,7 @@
 
     = f.input :title
 
-    = f.input :body, as: :text, input_html: { class: 'redactor' }
+    = f.input :body, as: :text, input_html: { class: 'js-redactor' }
 
     .row
       .col-lg-2
