fix accepted mail

--- a/app/views/user_mailer/post_accepted.en.html.slim
+++ b/app/views/user_mailer/post_accepted.en.html.slim
@@ -1,2 +1,2 @@
 | Congratulations! Your post "#{@post.title}" is awesome! Accepted!
-= @post.read_next_link(label: "Open")
+= @post.read_next_link(label: "Open", with_icon:false)
